# figpad

./: .gitignore  AUTHORS  ChangeLog  README.md  configure.ac  figpad.1  meson.build  meson_options.txt
data/: Makefile.am  figpad.desktop.in  figpad.xpm  meson.build
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/192x192/: Makefile.am
data/icons/20x20/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/256x256/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/36x36/: Makefile.am
data/icons/40x40/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/64x64/: Makefile.am
data/icons/72x72/: Makefile.am
data/icons/96x96/: Makefile.am
po/: POTFILES.in  ar.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  de_CH.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  lv.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sv.po  ta.po  tr.po  uk.po  vi.po  (+2 more)
src/: Makefile.am  callback.c  callback.h  dialog.c  dialog.h  dnd.c  dnd.h  emacs.c  emacs.h  encoding.c  encoding.h  figpad.h  file.c  file.h  font.c  font.h  gtkprint.c  gtkprint.h  gtksourceiter.c  hlight.c  hlight.h  indent.c  indent.h  linenum.c  linenum.h  main.c  menu.c  menu.h  meson.build  search.c  search.h  selector.c  selector.h  undo.c  undo.h  utils.c  utils.h  view.c  view.h  window.c  (+1 more)
