sources = [
  'main.c',
  'window.c',
  'menu.c',
  'callback.c',
  'view.c',
  'undo.c',
  'font.c',
  'linenum.c',
  'indent.c',
  'hlight.c',
  'selector.c',
  'file.c',
  'encoding.c',
  'search.c',
  'dialog.c',
  'gtkprint.c',
  'dnd.c',
  'utils.c',
  'emacs.c',
  'gtksourceiter.c',
]

executable('figpad',
  sources,
  include_directories: config_inc,
  dependencies: gtk_dep,
  install: true,
)
